# ComfyUI_RC_Image_Compositor

./: .gitignore  LICENSE  README.md  README_zh.md  __init__.py  adjustments.py  channel_ops.py  compositor.py  filters.py  gradient_generator.py  layer_styles.py  nodes.py  pyproject.toml  rc_image_compositor.py  requirements.txt  utilities.py
js/: rc_blend_if_ui.js  rc_compositor.js  rc_curves_ui.js  rc_gradient_common.js  rc_gradient_map_ui.js  rc_gradient_ui.js  rc_levels_ui.js  rc_lr_preset_ui.js  rc_presets.js
locales/en/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
nodes/adjustments/: adjustments.py  auto_color.py  color_match.py  gradient_map.py  lr_preset.py
nodes/core/: compositor.py
nodes/effects/: layer_styles.py
nodes/generators/: film_grain.py  filters.py  gradient_generator.py  pattern_tiling.py  shine_removal.py  skin_smoothing.py
nodes/utilities/: channel_ops.py  metadata_transfer.py  rc_compositor.py  utilities.py
