# pyproject.toml
[project]
name = "comfyui-rc-image-compositor"
description = "RC Image Compositor with Photoshop blend modes for ComfyUI"
version = "1.0.0"
license = "MIT"

[tool.comfy]
name = "RC Image Compositor"
description = "图像合成器，支持 Photoshop 混合模式、百分比定位、灵活缩放"
author = "Your Name"
project_url = "https://github.com/yourname/comfyui-rc-image-compositor"
tags = ["image", "composite", "photoshop", "blend"]
