# pyproject.toml
[project]
name = "comfyui-rc-image-compositor"
description = "RC Image Compositor with Photoshop blend modes for ComfyUI"
version = "1.0.0"
license = "MIT"

[tool.comfy]
name = "RC Image Compositor"
description = "Image compositor with Photoshop blend modes, percentage positioning, flexible scaling"
author = "Your Name"
project_url = "https://github.com/yourname/comfyui-rc-image-compositor"
tags = ["image", "composite", "photoshop", "blend"]
